# GazeboPlugin

./: CMakeLists.txt  README.md  readfile1.sh
models/: modelPlugin.world
src/: GazeboPlugin.cpp
